2018-02-04  Bruno Haible  <bruno@clisp.org>

	rawsock: Fix compilation failure on IRIX with cc.
	* modules/rawsock/rawsock.c (optional_sockaddr_argument, error_eai):
	Add braces to avoid declaration-after-statement.

2018-02-04  Bruno Haible  <bruno@clisp.org>

	Fix configure output on IRIX.
	* configure: Use `...` instead of $(...).

2018-02-04  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Minix/i386.
	* Makefile.devel (multibuild-minix-i386): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For Minix/i386, enable all optimizations
	except ASM.

2018-02-04  Bruno Haible  <bruno@clisp.org>

	Add support for Minix.
	* lispbibl.d: On Minix, define 'unix' and UNIX_MINIX. Define the
	object representation parameters.
	* stream.d (handle_pathname): On Minix, return NIL.
	* makemake.in (XCFLAGS): Handle Minix.
	On Minix, skip the test of /dev/fd/1.
	* Makefile.devel (multibuild-minix-i386): New target.

2018-02-03  Bruno Haible  <bruno@clisp.org>

	Enable one more build variant on HP-UX/HPPA in 64-bit mode.
	* Makefile.devel (multibuild-hpux-hppa-64): Enable also the
	build-porting64-cc-limited_memory build.

2018-02-03  Bruno Haible  <bruno@clisp.org>

	Record result for HP-UX/HPPA in 32-bit mode.
	* lispbibl.d (HEAPCODES1BIT_WITH_MALLOC_WORKS): Update value for
	HP-UX/HPPA in 32-bit mode.

2018-02-03  Bruno Haible  <bruno@clisp.org>

	Fix a build failure on HP-UX/ia64 in 64-bit mode.
	Namely, "PSEUDOCODE_ALIGNMENT is not fulfilled" error during clisp-link.
	* lispbibl.d (C_CODE_ALIGNMENT): Define to only 8 on 64-bit IA64.

2018-02-03  Bruno Haible  <bruno@clisp.org>

	Enable some more build variants on Linux/hppa.
	* lispbibl.d: On Linux/hppa, choose HEAPCODES by default, not
	TYPECODES. But don't choose KERNELVOID32_HEAPCODES by default.
	(HEAPCODES1BIT_WITH_TRIVIALMAP_WORKS, HEAPCODES1BIT_WITH_MALLOC_WORKS):
	Update value for Linux/hppa.
	(multibuild-linux-hppa): Enable the HEAPCODES builds that work.
